# 211H-Project

./: CMakeLists.txt  License.txt  README.md  chapters.cpp  chapters.h  credits.json  creditscene.cpp  creditscene.h  dialoguebox.cpp  dialoguebox.h  doctornpc.cpp  doctornpc.h  glowitem.h  herbspot.cpp  herbspot.h  imgs.qrc  main.cpp  mainwindow.cpp  mainwindow.h  maya-story.json  mayanpc.h  player.cpp  player.h  quiz.cpp  quiz.h  storymanager.cpp  storymanager.h  storyscene.cpp  storyscene.h  walk.xcf
